# paster-django

./: .coverage  .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.tox/flake8/: .tox-config1
.tox/py27/: .tox-config1
deploy.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt  requires.txt  top_level.txt
etc/: config.ini
lico/: __init__.py
lico/job/test_app/: common.py  factory.py  models.py  plugins.py  settings.py  urls.py  views.py  wsgi.py
lico/job/test_app/migrations/: 0001_lico_5_4_0.py
tests/: .coverage  =2.0  conftest.py  settings.py
tests/test_app/: .coverage  test_views.py
