[metadata]
name = deploy
version = 5.4.0
license = zhang biao
description = Restful server for zhang project
keywords = antilles, deploy
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[aliases]
test = pytest

[tool:pytest]
python_paths = .
DJANGO_SETTINGS_MODULE = tests.settings
DJANGO_CONFIGURATION = Standalone
django_find_project = false
addopts = --create-db --cov --cov-report term-missing --no-cov-on-fail
norecursedirs = dist build .tox
testpaths = tests/

[flake8]
max-line-length = 80
max-complexity = 10
show-source = true

[isort]
line-width = 79
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = antilles,lico
multi_line_output = 5
not_skip = __init__.py
